wintersmith-livereload plugin added

--- a/templates/index.jade
+++ b/templates/index.jade
@@ -2,6 +2,7 @@ doctype html
 html(lang='en')
   head
     meta(charset='utf-8')
+    | !{ livereloadScript }
     title= locals.title
   body
     h1= page.title
