--- a/templates/pattern.jade
+++ b/templates/pattern.jade
@@ -1,34 +1,46 @@
 extends ./layout.jade
 
 block tabNavigation
-  if patterns && patterns.length > 1
+  - var patterns = page.parent
+  - var active = false
     div.mdl-layout__tab-bar.mdl-js-ripple-effect
       each pattern, index in patterns
-        - var css_class="mdl-layout__tab #{index == 0 ? is-active}"
-        a(href="#tab-#{pattern.metadata.title.parameterize}", class=css_class)
-          #{pattern.metadata.title}
+        unless pattern.metadata.title == page.metadata.title 
+          - var cssClass="mdl-layout__tab"
+          unless active
+            - cssClass += " is_active"
+            - active = true
+          a(href="#tab-#{pattern.metadata.title.replace(' ', '_').toLowerCase()}", class=cssClass)
+            = pattern.metadata.title
 
-block content
-  if patterns
-    each pattern, index in patterns
-      - var css_class="mdl-layout__tab #{index == 0 ? is-active}"
-      section(id="tab-#{pattern.metadata.title.parameterize}" class=css_class)
+block content  
+  for pattern, index in page.parent
+    - var active = false
+    unless pattern.metadata.title == page.metadata.title
+      - var metadata = pattern.metadata
+      - var markdown = pattern.markdown
+      - var cssClass = "mdl-layout__tab"
+      unless active
+        - cssClass += " is_active"
+        - active = true
+      section(id="tab-#{metadata.title.replace(' ', '_').toLowerCase()}" class=cssClass)
         div.page-content
-          div.mpl-card-pattern.mdl-card.mdl-shadow--2dp
+          div.wpl-card-patern.mdl-card.mdl-shadow--2dp
             div.mdl-card__title.mdl-card--expand
-              h2.mdl-card__title-text #{pattern.metadata.title}
+              h2.mdl-card__title-text= metadata.title
             div.mdl-card__supporting-text
-              if pattern.metadata.description
-                = pattern.metadata.description
+              if metadata.description
+                = metadata.description
                 hr
-              div.mpl-layout__source
-                if pattern.metadata.use_source == false
-                  = pattern.body
-                else
-                  div(data-iframe)
-                    = pattern.body
-                    link(rel='stylesheet', href=contents.stylesheets['base.css'].url)
-                    script(src=contents.javascripts['base.js'].url)
-              if pattern.metadata.show_code
+            div.wpl-layout__source
+              if metadata.use_source
+                div(data-iframe)
+                  = markdown
+                  link(rel='stylesheet', href=contents.stylesheets['base.css'].url)
+                  script(src=contents.javascripts['base.js'].url)
+              else
+                = markdown
+                
+              if metadata.show_code
                 hr
-                code= pattern.body
+                code= markdown
