--- a/templates/layout.jade
+++ b/templates/layout.jade
@@ -7,6 +7,7 @@ html(lang='en')
     link(rel='stylesheet', href='https://code.getmdl.io/1.1.1/material.teal-red.min.css')
     link(rel='stylesheet', href='https://fonts.googleapis.com/icon?family=Material+Icons')
     link(rel='stylesheet', href=contents.stylesheets.wpl['application.css'].url)
+    link(rel='stylesheet', href=contents.stylesheets.wpl['prism.css'].url)
     link(rel='shortcut icon', href=contents.images['favicon.png'].url, type='image/x-icon')
     | !{ livereloadScript }
   body
@@ -35,3 +36,4 @@ html(lang='en')
             != page.html
     script(src='https://code.getmdl.io/1.1.1/material.min.js')
     script(src=contents.javascripts.wpl['application.js'].url)
+    script(src=contents.javascripts.wpl['prism.js'].url)
