--- a/templates/pattern.jade
+++ b/templates/pattern.jade
@@ -7,6 +7,7 @@ block tabNavigation
       - var index = 0
       each pattern, file in patterns
         a.mdl-layout__tab(class="#{index === 0 ? 'is-active' : ''}" href="#tab-#{parameterize(pattern.metadata.title)}")
+          // TODO: Show title from subcategory
           = pattern.metadata.title
         - index++
 
