--- a/templates/layout.jade
+++ b/templates/layout.jade
@@ -3,7 +3,8 @@ html(lang='en')
   head
     meta(charset='utf-8')
     meta(name='viewport', content='width=device-width, minimum-scale=1.0')
-    title #{locals.title} | #{page.title}
+    block headTitle
+      title #{locals.title} | #{page.title}
     link(rel='stylesheet', href='https://code.getmdl.io/1.1.1/material.teal-red.min.css')
     link(rel='stylesheet', href='https://fonts.googleapis.com/icon?family=Material+Icons')
     link(rel='stylesheet', href=contents.stylesheets.wpl['application.css'].url)
@@ -14,7 +15,8 @@ html(lang='en')
     div.mdl-layout.mdl-js-layout.mdl-layout--fixed-drawer.mdl-layout--fixed-header
       header.mdl-layout__header
         div.mdl-layout__header-row
-          span.mdl-layout-title= page.title
+          block headerTitle
+            span.mdl-layout-title= page.title
         block tabNavigation
       div.mdl-layout__drawer
         nav.mdl-navigation
