moved logic for title from jade to js-plugin

--- a/templates/pattern.jade
+++ b/templates/pattern.jade
@@ -1,18 +1,11 @@
 extends ./layout.jade
 
 block headTitle
-  // TODO: Move logic to JS
-  - var parentCategory = page.parent.parent
-  each category, index in parentCategory
-    if page.filepath.relative.indexOf(index) !== -1
-     title #{locals.title} | #{index.substr(0, 1).toUpperCase().concat(index.substr(1))}
+  - var headTitle = env.helpers.createPatternTitle(page)
+  title #{locals.title} | #{headTitle}
 
 block headerTitle
-  // TODO: Move logic to JS
-  - var parentCategory = page.parent.parent
-  each category, index in parentCategory
-    if page.filepath.relative.indexOf(index) !== -1
-     span.mdl-layout-title= index.substr(0, 1).toUpperCase().concat(index.substr(1))
+  span.mdl-layout-title= env.helpers.createPatternTitle(page)
 
 block tabNavigation
   - var patterns = page.parent
