--- a/templates/layout.jade
+++ b/templates/layout.jade
@@ -15,8 +15,9 @@ html(lang='en')
     div.mdl-layout.mdl-js-layout.mdl-layout--fixed-drawer.mdl-layout--fixed-header
       header.mdl-layout__header
         div.mdl-layout__header-row
-          block headerTitle
-            span.mdl-layout-title= page.title
+          span.mdl-layout-title
+            block headerTitle
+              = page.title
         block tabNavigation
       div.mdl-layout__drawer
         nav.mdl-navigation
