moved prism to libs/

--- a/templates/pattern.jade
+++ b/templates/pattern.jade
@@ -42,7 +42,7 @@ block content
                 code.language-markup= pattern.html
 
 block head
-  link(rel='stylesheet', href=contents.stylesheets.wpl['prism.css'].url)
+  link(rel='stylesheet', href=contents.stylesheets.libs['prism.css'].url)
 
 block foot
-  script(src=contents.javascripts.wpl['prism.js'].url)
+  script(src=contents.javascripts.libs['prism.js'].url)
