--- a/contents/stylesheets/wpl/application.css
+++ b/contents/stylesheets/wpl/application.css
@@ -63,3 +63,30 @@
 [data-iframe] {
   display: none;
 }
+
+/* Code */
+pre {
+  position:relative;
+}
+
+/* Copy-Button */
+.wpl-button__clipboard {
+  position: absolute;
+  right: 5px;
+  top: 5px;
+  min-width: 30px;
+  width: 30px;
+  height: 30px;
+}
+
+.mdl-button--fab.wpl-button__clipboard {
+  background-color: rgb(0,150,136);
+}
+
+.mdl-button--fab.wpl-button__clipboard:hover {
+  background-color: rgb(0,150,136);
+}
+
+.wpl-button__clipboard .material-icons {
+  font-size: 16px;
+}
