--- a/templates/pattern.jade
+++ b/templates/pattern.jade
@@ -43,7 +43,7 @@ block content
                   pre.wpl-layout__code
                     code.language-markup= codeblock
                   if pattern.metadata.clipboard !== false
-                    btn.mdl-button.mdl-js-button.mdl-button--fab.mdl-button--colored.mdl-js-ripple-effect.wpl-button__clipboard
+                    btn.mdl-button.mdl-js-button.mdl-button--icon.mdl-button--colored.wpl-button__clipboard
                       i.material-icons assignment
 
 block head
